add missing colon to messages page

--- a/app/views/insured/families/_inbox.html.erb
+++ b/app/views/insured/families/_inbox.html.erb
@@ -6,8 +6,8 @@
 
     <div>
       <strong>
-        <%= l10n("unread_messages")%>
-        <span class="pl-2"><%= @person.inbox.unread_messages.size %></span>
+        <%= l10n("unread_messages")%>:
+        <span class="pl-1"><%= @person.inbox.unread_messages.size %></span>
       </strong>
     </div>
   </div>
