--- a/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/shared/inboxes/_message_list.html.erb
@@ -26,8 +26,8 @@
   <h1><%= l10n("messages") %></h1>
 
   <div class="pl-3 inbox-sender row">
-    <%= l10n("unread_messages")%>
-    <div class="pl-2"><%= provider.inbox.unread_messages.size %></div>
+    <%= l10n("unread_messages")%>:
+    <div class="pl-1"><%= provider.inbox.unread_messages.size %></div>
   </div>
 </div>
 <div class="mt-4 mb-1" id="inbox-nav-tabs">
