feat: Update contact info keydown event handler

--- a/app/views/insured/families/_enrollment_refactored.html.erb
+++ b/app/views/insured/families/_enrollment_refactored.html.erb
@@ -117,7 +117,8 @@
                 data-target="#<%= product.kind.to_s %>-<%= product.id %>-<%= hbx_enrollment.hbx_id%>"
                 tabindex="0"
                 href="#"
-                onkeydown="handleContactInfoKeyDown(event, 'plan_contact_info-<%= hbx_enrollment.hbx_id%>', '#<%= product.kind.to_s %>-<%= product.id %>-<%= hbx_enrollment.hbx_id%>')">
+                onkeydown="handleContactInfoKeyDownAlt(event, 'plan_contact_info-<%= hbx_enrollment.hbx_id%>', '#<%= product.kind.to_s %>-<%= product.id %>-<%= hbx_enrollment.hbx_id%>')"
+                >
 
                 <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                   <title><%= l10n("phone") %></title>
@@ -138,8 +139,9 @@
     </div>
 
     <script>
-      function handleContactInfoKeyDown(event, id, modalId) {
+      function handleContactInfoKeyDownAlt(event, id, modalId) {
         if (event.key === 'Enter' || event.key === ' ') {
+          event.preventDefault();
           document.getElementById(id).click();
         }
       }
