--- a/app/javascript/css/alerts.scss
+++ b/app/javascript/css/alerts.scss
@@ -154,6 +154,7 @@
   height: 18px;
   width: 18px;
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z' fill='gray' /%3E%3C/svg%3E");
+  cursor: pointer;
   .sr-only {
     color: var(--default-font-color);
   }
