--- a/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_profile_information.html.erb
@@ -1,6 +1,6 @@
 <div class="row mb-3">
   <div class="col-md-6">
-    <label class="required" for="inputPracticeArea"><%= l10n("market_kind") %></label>
+    <%= f.label :market_kind, l10n("market_kind"), class: "required" %>
     <%= f.select(:market_kind, options_for_select(BenefitSponsors::Organizations::BrokerAgencyProfile::MARKET_KINDS_OPTIONS.inject([]) { |options, (k, v)| options << [k, v] }, selected: f.object.try(:market_kind)), { prompt: "Select Market Kind" }, { class: 'form-control', required: true }) %>
     <div class="invalid-feedback">
       <%= l10n("market_kind_error") %>
