--- a/app/views/insured/group_selection/edit_plan.html.erb
+++ b/app/views/insured/group_selection/edit_plan.html.erb
@@ -30,7 +30,7 @@
           <div class="panel-body">
             <div class="row">
               <div class="col-xs-8">
-                <div><%= raw product[:display_carrier_logo] %></div>
+                <div><%= display_carrier_logo(Maybe.new(product), {width: 110}) %></div>
                 <h4><strong><%= link_to product[:title], summary_products_plans_path({:standard_component_id => product.hios_id, hbx_enrollment_id: hbx_enrollment[:id], active_year: product.active_year}), remote: true %></strong>
                 </h4>
                 <div>
