--- a/app/views/ui-components/bs4/v1/forms/broker/contact_information/_phone.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/contact_information/_phone.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <%= f.hidden_field :kind, value: 'work', id: "phoneType" %>
   <div class="col-md-3 mb-3">
-    <label for="inputNumber" class='required'><%= l10n('phone_number') %></label>
-    <%= f.text_field :full_number_without_extension, 
+    <%= f.label :full_number_without_extension, l10n("phone_number"), class: "required" %>
+    <%= f.text_field :full_number_without_extension,
       placeholder: "(000) 000-0000",
-      required: true, id: 'inputNumber', 
+      required: true,
       class: 'form-control phone_number',
-      minlength: '10', maxlength: '10', 
+      minlength: '10', maxlength: '10',
       onkeypress: 'return isNumberKey(event)',
       value: determine_phone_number(f.object)
     %>
