chore: Add tabindex to "tabs" at top of page

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new.html.erb
@@ -3,10 +3,10 @@
     <div id="broker_agency_form" class="bs4-active">
       <ul class="broker-registration-tabs list-inline list-unstyled">
         <li class="d-inline-block mx-0">
-          <a class='weight-n default-text text-decoration-none' href="#broker_agency_staff"><%= l10n("broker_agency_staff") %></a>
+          <a class='weight-n default-text text-decoration-none' href="#broker_agency_staff" tabindex="0"><%= l10n("broker_agency_staff") %></a>
         </li>
         <li class="d-inline-block mx-0 ui-tabs-active ui-state-active">
-          <a class='weight-n default-text text-decoration-none' href="#broker_registration"><%= l10n("broker") %> <%= l10n("broker_agency") %></a>
+          <a class='weight-n default-text text-decoration-none' href="#broker_registration" tabindex="0"><%= l10n("broker") %> <%= l10n("broker_agency") %></a>
         </li>
       </ul>
       <div id="broker_agency_staff" class="tab-content tab-container mt-0"></div>
