chore: Improve accessibility of staff registration form
Update the staff registration form to improve accessibility. This change includes adding appropriate label elements and updating the input fields for better accessibility.

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_new_staff_applicant.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_new_staff_applicant.html.erb
@@ -18,7 +18,8 @@
       <div class="col-md-9 col-sm-9 col-xs-12 broker-agency-search">
         <div class="row search-dropdown-wrapper">
           <div class="col-md-12 col-sm-12 col-xs-12 px-0">
-            <label class='pl-3'><%= l10n("broker_agencies.broker_roles.search_broker_agencies") %></label>
+
+<%= f.label :agency_search, l10n("broker_agencies.broker_roles.search_broker_agencies"), class: 'pl-3' %>
             <div class="col-md-12 col-sm-10 col-xs-12 input-group d-flex align-items-center justify-content-start">
               <%= f.hidden_field :profile_id %>
               <%= f.hidden_field :profile_type, value: "broker_agency_staff" %>
