--- a/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
+++ b/app/views/ui-components/bs4/v1/forms/broker/_staff_registration.html.erb
@@ -2,29 +2,29 @@
 <legend class='beta bold mb-3'><%= l10n("personal_information") %></legend>
 <div class="row mb-4">
   <div class="col-md-3 mb-2">
-    <label for="inputFirstname" class='required'><%= l10n('first_name') %></label>
-    <%= f.text_field :first_name, placeholder: l10n('first_name'), required: 'true', id: 'inputFirstname', class: 'form-control' %>
+    <%= f.label :first_name, l10n("first_name"), class: "required" %>
+    <%= f.text_field :first_name, placeholder: l10n('first_name'), required: 'true', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_first_name") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputLastname" class='required'><%= l10n('last_name') %></label>
-    <%= f.text_field :last_name, placeholder: l10n('last_name'), required: 'true', id: 'inputLastname', class: 'form-control' %>
+    <%= f.label :last_name, l10n("last_name"), class: "required" %>
+    <%= f.text_field :last_name, placeholder: l10n('last_name'), required: 'true', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_last_name") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputEmail" class='required'><%= l10n('email_address') %></label>
-    <%= f.email_field :email, placeholder: l10n('placeholder_email'), required: 'true', id: 'inputEmail', class: 'form-control' %>
+    <%= f.label :email, l10n("email_address"), class: "required" %>
+    <%= f.email_field :email, placeholder: l10n('placeholder_email'), required: 'true', class: 'form-control' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_email") %>
     </div>
   </div>
   <div class="col-md-3 mb-2">
-    <label for="inputDOB" class='required'><%= l10n('broker_agencies.dob') %></label>
-    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max: 18.years.ago.end_of_month, required: true, class: 'form-control', onblur: 'validDob(this)' %>
+    <%= f.label :dob, l10n("broker_agencies.dob"), class: "required" %>
+    <%= f.date_field :dob, placeholder: l10n('dob_format'), min: 110.years.ago, max: 16.years.ago, required: true, class: 'form-control', onblur: 'validDob(this)' %>
     <div class="invalid-feedback">
       <%= l10n("invalid_dob") %>
     </div>
