--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -77,9 +77,9 @@
                 <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
                   <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required keep-label mask-ssn",
                     pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-                    oninput: "this.setCustomValidity('')", disabled: readonly %>
+                    oninput: "this.setCustomValidity('')" %>
                 <% else %>
-                  <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required", disabled: readonly %>
+                  <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required" %>
                 <% end %>
               <% end %>
             </div>
