--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -1,4 +1,5 @@
 <% if @bs4 %>
+<% readonly_status = @person.is_a?(Person) %>
   <div id="<%= employee_dependent_form_id(dependent) %>" class="dependent_list">
     <% is_editing = dependent.id.present? %>
     <h2><%= is_editing ? l10n("edit_member") : l10n("add_member") %></h2>
@@ -77,9 +78,10 @@
                 <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
                   <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required keep-label mask-ssn",
                     pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-                    oninput: "this.setCustomValidity('')" %>
+                    oninput: "this.setCustomValidity('')",
+                    disabled: readonly_status %>
                 <% else %>
-                  <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required" %>
+                  <%= f.text_field :ssn, placeholder: "000-00-0000", class: "required", disabled: readonly_status %>
                 <% end %>
               <% end %>
             </div>
